# webtransport-poc

./: .gitignore  README.md  index.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cert/: Makefile  generate
server-go/: bucket.go  go.mod  go.sum  main.go  recv_stream.go  send_stream.go  stream.go  wt.go
server-rs/: Cargo.toml
server-rs/src/: main.rs
src/: logger.ts  main.ts  transport.ts  utils.ts
src/media-worker/: decoder.ts  encoder.ts  index.ts  worker.ts
src/workers/: decoder.ts  encoder.ts  index.ts  pipeline.ts  tsconfig.json
web/: index.html  package-lock.json  package.json  tsconfig.json
web-client/: README.md  index.html  vite.config.ts
web-client/src/: logger.ts  main.ts
web-client/src/media-worker/: tsconfig.json
web/src/: buffer.ts  forwarder.ts  gum.ts  main.ts  metrics.ts  packet.ts  stream.ts  track.ts  transport.ts  types.ts  utils.ts
web/src/decoder/: audio.ts  video.ts
web/src/encoder/: audio.ts  video.ts
web/src/media-worker/: encoder.ts  index.ts  worker.ts
web/src/streams/: recv_stream.ts  send_stream.ts
wt-rs/: Cargo.toml
wt-rs/src/: bucket.rs  config.rs  lib.rs  port_manager.rs  publisher.rs  session.rs  subscriber.rs  track.rs  wt.rs
