[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quinn = "0.10"
bytes = "1"
quinn-proto = "0.10"
http = "1.0.0"
thiserror = "1"
futures = "0.3"
url = "2"
log = "0.4"
webtransport-quinn = "0.7.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
env_logger = "0.10"
rustls-pemfile = "1.0.2"
