[package]
name = "banana"
version = "0.1.0"
edition = "2021"

[dependencies]
webtransport-quinn = "0.8.0"
quinn = "0.10"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
env_logger = "0.11.3"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "1.0.2"
log = "0.4.21"
bytes = "1.6.0"
